--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
                     <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
                   <li class="bg-dark list-group-item">
-                    <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                    <label for="city">Enter City</label>
+                    <input type="text" placeholder="El Cajon" id="string" />
+                  </li>
+                  <li class="bg-dark list-group-item">
+                    <label for="state">Enter State</label>
+                    <input type="text" placeholder="CA" id="string" />
+                  </li>
+                  <li class="bg-dark list-group-item">
+                    <label for="US">Enter Country</label>
+                    <input type="text" placeholder="USA" id="string" />
+                  </li>
+                  <li class="bg-dark list-group-item">
+                    <label for="shape">Enter Shape</label>
+                    <input type="text" placeholder="triangle" id="string" />
                   </li>
 
                 </ul>
