--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
                   </li>
                   <li class="bg-dark list-group-item">
                     <label for="city">Enter City</label>
-                    <input type="text" placeholder="El Cajon" id="string" />
+                    <input type="text" placeholder="El Cajon" id="city" />
                   </li>
                   <li class="bg-dark list-group-item">
                     <label for="state">Enter State</label>
-                    <input type="text" placeholder="CA" id="string" />
+                    <input type="text" placeholder="CA" id="state" />
                   </li>
                   <li class="bg-dark list-group-item">
                     <label for="US">Enter Country</label>
-                    <input type="text" placeholder="USA" id="string" />
+                    <input type="text" placeholder="USA" id="country" />
                   </li>
                   <li class="bg-dark list-group-item">
                     <label for="shape">Enter Shape</label>
-                    <input type="text" placeholder="triangle" id="string" />
+                    <input type="text" placeholder="triangle" id="shape" />
                   </li>
 
                 </ul>
@@ -72,13 +72,13 @@
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th><th>Date</th>
+                  <th>Date</th>
                   <th>City</th>
                   <th>State</th>
                   <th>Country</th>
                   <th>Shape</th>
                   <th>Duration</th>
-                  <th>Comments</th></th>
+                  <th>Comments</th>
                 </tr>
               </thead>
               <tbody></tbody>
